<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mbako</string>
    <string name="splash_text_logo">Bid your tabacco now</string>
    <string name="welcome_text">Hi, Welcome to</string>
    <string name="UI_validation_invalid_email">Format email tidak valid</string>
    <string name="UI_validation_password_rules">Password harus berisi minimal 8 karakter</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Daftar</string>
    <string name="const_text_auth_question_login">Belum punya akun?</string>
    <string name="const_text_register">Daftar</string>
    <string name="name_text">Nama</string>
    <string name="title_signup_page">Buat Sebuah Akun</string>
    <string name="const_text_auth_question_register">Sudah punya akun?</string>
    <string name="const_text_login">Masuk</string>
    <string name="button_text_ok">ok</string>
    <string name="const_lorem_ipsum">Lorem Ipsum</string>
    <string name="UI_info_successful_register_user" tools:ignore="ExtraTranslation">Register pengguna baru berhasil, silahkan tekan tombol ok untuk menuju ke aplikasi</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_name">Masukkan nama</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="save_btn">Save</string>
    <string name="txt_new_email">Masukkan Email Baru</string>
    <string name="txt_new_pass">Masukkan Password Baru</string>
    <string name="edt_new_email">New Email</string>
    <string name="edt_new_password">New Password</string>
    <string name="edt_new_password_confirm">New Password Confirm</string>
    <string name="btn_update">Update</string>
    <string name="txt_new_password">Masukkan Password Lama</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>

    <string name="reset_password">Reset Password</string>
    <string name="masukkan_email_txt">Masukkan Email</string>
    <string name="btn_reset">Reset Password</string>
    <string name="forgot_password_text">Lupa Password</string>

</resources>