<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_signin_button"
                android:text="@string/save_btn"
                android:textColor="#FFFFFF"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="@+id/etPhone"
                app:layout_constraintStart_toStartOf="@+id/etPhone"
                app:layout_constraintTop_toBottomOf="@+id/tv_change_password" />

            <ImageView
                android:id="@+id/ic_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_verified"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/etEmail"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toEndOf="@+id/etEmail"
                app:layout_constraintTop_toTopOf="@+id/etEmail" />

            <ImageView
                android:id="@+id/ic_unverified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_unverified"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/etEmail"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toEndOf="@+id/etEmail"
                app:layout_constraintTop_toTopOf="@+id/etEmail" />

            <TextView
                android:id="@+id/tv_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_password"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/etPhone"
                app:layout_constraintStart_toStartOf="@+id/etPhone"
                app:layout_constraintTop_toBottomOf="@+id/etPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>